Migrate to springboot 3.2 (#1349)
* openrewrite run recipe UpgradeSpringBoot_3_0

* openrewrite run recipe UpgradeSpringBoot_3_1

* update Spring Boot to 3.2

* add missing @Autowired in test constructors, fix dependencies and configuration

* add missing mvcHandlerMappingIntrospector

* fix CheckRestApiStability test

* disable log to file

* add samesite attribute to session cookie; rename session cookie to avoid conflicts with other spring applications

* update dependencies

* check URL

* optimize dependencies + replace opencsv with jackson

* restore RequestParam value